--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,8 +1,11 @@
-Adams:
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+Yger:
+    url: http://www.yger.fr/
 
-Podolsky:
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+Kalunga:
+    url: https://www.linkedin.com/in/emmanuel-k-kalunga/
 
-Rosen:
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+Massart:
+    url: https://www.maths.ox.ac.uk/people/estelle.massart
+
+Zammouri:
+    url: http://azammouri.com/
