update config and page style

--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,36 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-name: Your Name
-email: you@example.com
+name: Sylvain Chevallier
+email: sylvain.chevallier@uvsq.fr
 description: > # this means to ignore newlines until "url:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: >
-  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-
+  Associate professor, [LISV](http://www.lisv.uvsq.fr/) - [University of Versailles](http://www.uvsq.fr/)
+  Teaching at [IUT de Velizy](http://www.iut-velizy.uvsq.fr/) and [Universite Paris-Saclay](https://www.universite-paris-saclay.fr/)
 url:  # the base hostname & protocol for your site
-baseurl: /al-folio # the subpath of your site, e.g. /blog/
+baseurl: # the subpath of your site, e.g. /blog/
 last_updated: # leave blank if you don't want to display last updated
 
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-github_username: # your GitHub user name
-twitter_username: # your Twitter handle
-linkedin_username: # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
-orcid_id: # your ORCID ID
+github_username: sylvchev # your GitHub user name
+twitter_username: sylvcheva # your Twitter handle
+linkedin_username: sylvain-chevallier-646879171 # your LinkedIn user name
+scholar_userid: j5Tu_SQAAAAJ # your Google Scholar ID
+orcid_id: 0000-0003-3027-8241 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Best way to reach me is by mail
 
-google_analytics: UA-XXXXXXXXX # out your google-analytics code
+google_analytics: UA-15576823-2 # out your google-analytics code
 
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
-blog_name: al-folio
-blog_description: a simple whitespace theme for academics
+blog_name: IndentFirst
+blog_description: Sylvain's blog
 
 # Pagination
 paginate: 4
@@ -47,10 +43,10 @@ text:
     older: 'Older'
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: # put your disqus shortname TODO
 
 # Optional features
-show_social_icons:  false
+show_social_icons:  true
 enable_anchorjs:    false
 enable_katex:       true
 
@@ -66,8 +62,11 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  teaching:
+    output: true
+    permalink: /teaching/:path/
 
-news_limit: 5
+news_limit: 10
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
@@ -75,6 +74,7 @@ news_limit: 5
 
 # Build settings
 markdown: kramdown
+mathjax: true
 highlighter: pygments
 
 # Includes & excludes
@@ -91,9 +91,9 @@ plugins:
 # Jekyll-Scholar
 scholar:
 
-  last_name: Einstein
+  last_name: Chevallier
 
-  style: apa
+  style: frontiers-in-bioscience.csl
   locale: en
 
   sort_by: year
