using mathjax instead of katex

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,8 @@ disqus_shortname: # put your disqus shortname TODO
 # Optional features
 show_social_icons:  true
 enable_anchorjs:    false
-enable_katex:       true
+enable_katex:       false
+enable_mathjax:     true
 
 # -----------------------------------------------------------------------------
 # Collections
