--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -9,3 +9,30 @@ Massart:
 
 Zammouri:
     url: http://azammouri.com/
+
+Corsi:
+    url: https://marieconstance-corsi.netlify.app
+
+de Vico Fallani:
+    url: https://sites.google.com/site/devicofallanifabrizio/
+
+Lotte:
+    url: https://sites.google.com/site/fabienlotte/
+
+Azabou:
+    url: https://www.2i.uvsq.fr/m-eric-azabou
+
+Amorim:
+    url: https://www.faculte-sciences-sport.universite-paris-saclay.fr/michel-ange-amorim
+
+Delorme:
+    url: https://arnauddelorme.com/
+
+Sra:
+    url: https://idss.mit.edu/staff/suvrit-sra-2/
+
+Bao:
+    url: https://www.linkedin.com/in/guillaume-bao-1aa8b8b8/?originalSubdomain=fr
+
+Clisson:
+    url: https://clisson.com/
