fix: correct email

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # Site settings
 # -----------------------------------------------------------------------------
 name: Sylvain Chevallier
-email: sylvain.chevallier@uvsq.fr
+email: sylvain.chevallier@universite-paris-saclay.fr
 description: > # this means to ignore newlines until "url:"
-  Associate professor HDR, [LISV](http://www.lisv.uvsq.fr/) - [University of Versailles](http://www.uvsq.fr/)
-  Teaching at [IUT de Velizy](http://www.iut-velizy.uvsq.fr/) and [Universite Paris-Saclay](https://www.universite-paris-saclay.fr/)
+  Full professor, [LISN](https://www.lisn.upsaclay.fr/) - [Universite Paris-Saclay](https://www.universite-paris-saclay.fr/)
+  Teaching at [IUT d'Orsay](https://www.iut-orsay.universite-paris-saclay.fr/) and [Universite Paris-Saclay](https://www.universite-paris-saclay.fr/)
 url:  # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: # leave blank if you don't want to display last updated
