enh: update mail

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 name: Sylvain Chevallier
-email: sylvain.chevallier@universite-paris-saclay.fr
+email: sylvain.a.chevallier@inria.fr
 description: > # this means to ignore newlines until "url:"
   Full professor, [LISN](https://www.lisn.upsaclay.fr/) - [Universite Paris-Saclay](https://www.universite-paris-saclay.fr/)
   Teaching at [IUT d'Orsay](https://www.iut-orsay.universite-paris-saclay.fr/) and [Universite Paris-Saclay](https://www.universite-paris-saclay.fr/)
